--- a/src/app/password/password.component.scss
+++ b/src/app/password/password.component.scss
@@ -1,8 +1,9 @@
-@import "src/default";
+@use 'src/default' as *;
 @import 'bootstrap/scss/mixins';
 
 .form-control {
   font-size: $font-size-medium-mobile;
+
   @include media-breakpoint-up(lg) {
     font-size: $font-size-medium;
   }
@@ -26,6 +27,7 @@
   background-size: $form-icon-width * 0.6 $form-icon-height * 0.6;
   align-items: center;
   justify-content: space-between;
+
   @include media-breakpoint-up(lg) {
     background-size: $form-icon-width $form-icon-height;
   }
