--- a/src/app/shared/components/combobox/combobox.component.html
+++ b/src/app/shared/components/combobox/combobox.component.html
@@ -19,7 +19,7 @@
     [attr.data-id]="dataId"
     tabindex="0"
   >
-    {{ this.options[activeIndex].value }}
+    {{ options[activeIndex].value }}
   </div>
   <div
     #listbox
