--- a/src/app/links/links.component.scss
+++ b/src/app/links/links.component.scss
@@ -1,4 +1,4 @@
-@import "src/default";
+@use 'src/default' as *;
 @import 'bootstrap/scss/mixins';
 
 $icon-width: 30px;
@@ -8,19 +8,17 @@ $icon-height: 30px;
   display: block;
   color: black;
 
-  @include media-breakpoint-up(lg) {
-    word-wrap: break-word;
-  }
+  font-size: $font-size-medium-mobile;
+  font-weight: $font-weight-normal;
 
   @include media-breakpoint-down(md) {
     word-wrap: break-word;
   }
 
-  font-size: $font-size-medium-mobile;
   @include media-breakpoint-up(lg) {
+    word-wrap: break-word;
     font-size: $font-size-medium;
   }
-  font-weight: $font-weight-normal;
 }
 
 .link-container {
@@ -31,6 +29,7 @@ $icon-height: 30px;
 
 .btn {
   font-size: $font-size-medium-mobile !important;
+
   @include media-breakpoint-up(lg) {
     font-size: $font-size-medium !important;
   }
@@ -51,14 +50,13 @@ a.link-with-image {
   color: var(--primary, #{$primary});
   padding-left: 6px;
   border: 0;
+  text-align: left;
 
   img {
     margin-left: 4px;
     height: $icon-height * 0.66;
     width: $icon-width * 0.66;
   }
-
-  text-align: left;
 
   @include media-breakpoint-up(lg) {
     img {
@@ -70,6 +68,7 @@ a.link-with-image {
 
 .text-danger {
   font-size: $font-size-small-mobile;
+
   @include media-breakpoint-up(lg) {
     font-size: $font-size-small;
   }
@@ -78,6 +77,7 @@ a.link-with-image {
 .link-description {
   font-size: $font-size-medium-mobile;
   font-weight: bold;
+
   @include media-breakpoint-up(lg) {
     font-size: $font-size-medium;
   }
