--- a/src/app/shared/components/checkbox-field/checkbox-field.component.scss
+++ b/src/app/shared/components/checkbox-field/checkbox-field.component.scss
@@ -1,9 +1,10 @@
-@import "src/default";
+@use 'src/default' as *;
 @import 'bootstrap/scss/mixins';
 
 label {
   font-weight: $font-weight-normal !important;
   font-size: $font-size-small-mobile !important;
+
   @include media-breakpoint-up(lg) {
     font-size: $font-size-small !important;
   }
