--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -1,4 +1,4 @@
-@import "src/default";
+@use 'src/default' as *;
 @import 'bootstrap/scss/mixins';
 
 #email {
@@ -15,6 +15,7 @@
 
 #contact * {
   font-size: $font-size-small-mobile;
+
   @include media-breakpoint-up(lg) {
     font-size: $font-size-small;
   }
@@ -79,11 +80,12 @@
 
   a {
     font-size: $font-size-small-mobile;
+    color: var(--dark-gray, #{$dark-gray});
+    margin: 0 4px 0 4px;
+
     @include media-breakpoint-up(lg) {
       font-size: $font-size-small;
     }
-    color: var(--dark-gray, #{$dark-gray});
-    margin: 0 4px 0 4px;
   }
 }
 
