--- a/src/app/shared/components/dates-overview/dates-overview.component.html
+++ b/src/app/shared/components/dates-overview/dates-overview.component.html
@@ -1,9 +1,9 @@
-@if (appointment) {
+@if (appointment()) {
   <div class="date-time-overview mt-2 table-responsive">
     <table class="table table-borderless d-inline-block mt-1" data-id="overviewDates">
       <thead>
       <tr>
-        @for (date of appointment.suggestedDates; track date; let i = $index) {
+        @for (date of appointment().suggestedDates; track date; let i = $index) {
           <th>
             {{ 'date.date' | translate }} {{ i + 1 }}
           </th>
@@ -12,7 +12,7 @@
       </thead>
       <tbody>
       <tr>
-        @for (date of appointment.suggestedDates; track date; let i = $index) {
+        @for (date of appointment().suggestedDates; track date; let i = $index) {
           <td>
             <app-suggested-date [date]="date" [index]="i"></app-suggested-date>
           </td>
