--- a/src/app/shared/components/poll-options/poll-options.component.html
+++ b/src/app/shared/components/poll-options/poll-options.component.html
@@ -1,4 +1,4 @@
-@if (formGroup !== null) {
+@if (formGroup() !== null) {
   <div class="row g-1">
     @for (status of votingStatus; track status) {
     <div class="col-4 d-flex justify-content-center">
@@ -10,16 +10,16 @@
     </div>
     }
   </div>
-  <div [formGroup]="formGroup" class="row g-1 mt-1">
+  <div [formGroup]="formGroup()" class="row g-1 mt-1">
     @for (status of votingStatus; track status) {
       <div class="col-4">
         <div class="d-flex justify-content-center">
           <input
             class=""
             type="radio"
-            id="{{getPrefix()}}-voting-status-{{status}}-{{selectorId}}"
+            id="{{getPrefix()}}-voting-status-{{status}}-{{selectorId()}}"
             formControlName="status"
-            [attr.name]="getPrefix() + '-voting-status-' + selectorId"
+            [attr.name]="getPrefix() + '-voting-status-' + selectorId()"
             value="{{status}}"
             [attr.aria-label]="'votingStatus.' + status | translate"
           >
