--- a/src/index.html.tmpl
+++ b/src/index.html.tmpl
@@ -9,6 +9,7 @@
 
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="favicon.ico?v=2" rel="icon" type="image/x-icon">
+  <script src="environment.js"></script>
 </head>
 <body>
 <app-root></app-root>
