refactor: reintroduce `consoleLoggingOptions` and `apiMediaType` as overrideable options

--- a/src/environment.js.tmpl
+++ b/src/environment.js.tmpl
@@ -19,5 +19,7 @@ window['__env'] = {
   termsOfService: @TOS@,
   accessibility: @ACCESSIBILITY@,
   apiRequestTimeoutInMs: @API_REQUEST_TIMEOUT_IN_MS@,
+  consoleLoggingOptions: @CONSOLE_LOGGING_OPTIONS@,
+  apiMediaType: @API_MEDIA_TYPE@,
   colors: @COLORS@
 };
